<resources>
    <string name="app_name">NOBLE LOTUS</string>
    <!--  đăng nhập  -->
    <string name="tv_taikhoan">Tài khoản</string>
    <string name="tv_matkhau">Mật khẩu</string>
    <string name="btn_dangnhap">ĐĂNG NHẬP</string>
    <!--    Toolbar-->
    <string name="tennhahang">NOBLE LOTUS</string>

    <!--  bottom_nav -->
    <string name="action_danhsachphong">Danh sách</string>
    <string name="action_datphong">Đặt phòng</string>
    <string name="action_trangchu">Trang chủ</string>
    <string name="action_nhanphong">Nhận phòng</string>
    <string name="action_them">Lịch sử</string>
    <string name="action_luu">Lưu</string>
    <string name="action_traphong">Trả phòng</string>
    <string name="action_doiphong">Đổi phòng</string>

    <!--  bottom_navban -->
    <string name="action_danhsachban">Danh sách</string>
    <string name="action_datban">Đặt bàn</string>
    <string name="action_trangchuban">Trang chủ</string>
    <string name="action_nhanban">Nhận bàn</string>
    <string name="action_themban">Lịch sử</string>


    <!--  Trang chủ  -->
    <string name="tv_nhahang">Nhà Hàng</string>
    <string name="tv_khachsan">Khách sạn</string>

    <!--  Drawer_layout  -->
    <string name="action_nhaphang">Khách hàng</string>
    <string name="action_kho">Quản lý kho</string>
    <string name="action_thongke">Quản Lý Menu</string>
    <string name="action_thongtincanhan">Thông tin cá nhân</string>
    <string name="action_dangxguat">Đăng xuất</string>
    <!--phiếu trả phòng-->
    <string name="tv_phieutraphong">Phiếu trả phòng</string>
    <!-- Chi tiết phòng   -->
    <string name="tv_chitietphong">Chi tiết phòng</string>
    <string name="tv_sophong">Số phòng: </string>
    <string name="tv_loaiphong">Loại phòng: </string>
    <string name="tv_ghichu">Ghi chú: </string>
    <string name="tv_csvc">Cơ sở vật chất: </string>
    <string name="tv_menu">Menu sử dụng: </string>
    <string name="tv_tongtien">Tổng tiền: </string>
    <!--    Phiếu đặt phòng-->
    <string name="tv_phieudatphong">Phiếu đặt phòng</string>
    <string name="tv_phieudatphongct">Phiếu đặt phòng chi tiết</string>
    <string name="tv_dsphieudatphong">Danh sách phiếu đặt phòng</string>
    <string name="tv_sochungtu">Số chứng từ:</string>
    <string name="tv_hoten">Họ tên:</string>
    <string name="tv_cccd">CCCD:</string>
    <string name="tv_sdt">SĐT:</string>
    <string name="tv_songuoi">Số người:</string>
    <string name="tv_thoigiannhan">Thời gian nhận:</string>
    <string name="tv_thoigiantra">Thời gian trả:</string>
    <string name="tv_phong">Phòng:</string>
    <string name="tv_gia">Giá:</string>
    <string name="tv_PDP1">PDP1</string>
    <string name="tv_thoigianlapphieu">Thời gian</string>
    <!--    phiếu nhận phòng-->
    <string name="tv_phieunhanphong">Phiếu nhận phòng</string>
    <string name="tv_dsphieunhanphong">Danh sách phiếu nhận phòng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    Phiếu nhập hàng-->
    <string name="tv_phieunhaphang">Phiếu nhập hàng</string>
    <string name="tv_ncc">Tên ncc</string>
    <string name="tv_sp01">Sản phẩm 1</string>
    <string name="tv_sp02">Sản phẩm 2</string>
    <string name="tv_tong">Tổng: </string>
    <string name="tv_tensp">Tên sản phẩm</string>
    <string name="tv_dongia">Đơn giá</string>
    <string name="tv_donvitinh">Đơn vị tính</string>
    <string name="tv_soluong">Số lượng</string>
    <string name="tv_loaihanghoa">Loại hàng hóa</string>
    <string name="tv_kho">Kho</string>
    <string name="btn_xacnhan">Xác nhận</string>


    <!--    chức năng-->
    <string name="text_nhanphong">Nhận phòng</string>
    <string name="text_datphong">Đặt phòng</string>
    <string name="text_traphong">Trả phòng</string>
    <string name="text_chitiet">Chi tiết</string>
    <string name="text_doiphong">Đổi phòng</string>
    <string name="text_baotri">Bảo trì</string>

    <!--    Drawer-->
    <string name="dra_open">Open</string>
    <string name="dra_close">Close</string>


    <!--    menu-->

    <string name="fragment_menu_page1_title">Dịch vụ</string>
    <string name="fragment_menu_page2_title">Gọi món</string>
    <string name="fragment_menu_page3_title">Đồ uống</string>
    <!-- Thong tin ca nhan-->
    <string name="tv_tai_khoan">Tài khoản: </string>
    <string name="tv_so_dien_thoai">Số điện thoại: </string>
    <string name="tv_que_quan">Địa chỉ: </string>
    <string name="tv_gioi_tinh">Giới tính: </string>
    <string name="tv_can_cuoc_cong_dan">CCCD: </string>
    <string name="tv_chuc_vu">Chức vụ: </string>
    <string name="btn_sua_thongtincanhan">Chỉnh sửa</string>
    <string name="btn_doi_mat_khau">Đổi mật khẩu</string>


    <!--    đổi vị trí-->
    <string name="tv_phieudoiphong">Phiếu đổi phòng</string>
    <string name="tv_vitribandau">Vị trí ban đầu:</string>
    <string name="tv_vitridoi">Vị trí đổi:</string>
    <!--    phiếu thu-->
    <string name="tv_sotiencanthanhtoan">Số tiền cần thanh toán:</string>
    <string name="tv_sotienkhachdua">Số tiền khách đưa:</string>
    <string name="rad_thanhtoanbangtienmat">Tiền mặt</string>
    <string name="rad_thanhtoanbangchuyenkhoan">Chuyển khoản</string>
    <!--    dialog chuc nang-->
    <string name="dialog_nhanphong">Nhận phòng</string>
    <string name="dialog_datphong">Đặt phòng</string>
    <string name="dialog_chitietphong">Chi tiết phòng</string>
    <string name="dialog_traphong">Trả phòng</string>
    <string name="dialog_doiphong">Đổi phòng</string>
    <string name="dialog_baotri">Bảo trì</string>
    <string name="dialog_menu">Menu</string>
    <string name="dialog_dangxuat">Bạn thực sự muốn đăng xuất?</string>

    <!--    dialog chuc nang bàn-->
    <string name="dialog_nhanban">Nhận bàn</string>
    <string name="dialog_datban">Đặt bàn</string>
    <string name="dialog_chitietban">Chi tiết bàn</string>
    <string name="dialog_traban">Trả bàn</string>
    <string name="dialog_doiban">Đổi bàn</string>
    <string name="dialog_baotriban">Bảo trì</string>

    <string name="error_msg_unknown">Đã xảy ra lỗi không mong muốn</string>
    <string name="error_msg_no_internet">Vui lòng kiểm tra kết nối và thử lại.</string>
    <string name="title_error_msg">Thông báo</string>


    <string name="floating_action_button_description">Tạo mới</string>
    <string name="textview_ls">Danh sách phiếu xuất</string>


    <!--    Dialog-->
    <string name="dialog_btn_ok">ĐỒNG Ý</string>
    <string name="dialog_btn_cancel">HỦY</string>

    <!--    Dialog-->
    <string name="thanhtoan">Thanh Toán</string>
    <string name="thanhtoansau">Thanh toán sau</string>

    <string name="ttnv">Thông tin nhân viên</string>








</resources>