<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/dra_trangchu"
        android:icon="@drawable/ic_trangchu"

        android:title="@string/action_trangchu"></item>
    <item
        android:id="@+id/dra_nhaphang"
        android:icon="@drawable/ic_nhaphang"
        android:title="@string/action_nhaphang"></item>
    <item
        android:id="@+id/dra_kho"
        android:icon="@drawable/ic_bieudo"

        android:title="Doanh thu"
        ></item>
    <item
        android:id="@+id/dra_thongke"
        android:icon="@drawable/ic_bieudo"
        android:title="@string/action_thongke"></item>
    <item
        android:id="@+id/dra_nhanvien"
        android:icon="@drawable/group"
        android:title="Nhân viên"></item>
    <item
        android:id="@+id/dra_thongtincanhan"
        android:icon="@drawable/ic_infor"
        android:title="@string/action_thongtincanhan"></item>
    <item
        android:id="@+id/dra_dangxuat"
        android:icon="@drawable/ic_logout"

        android:title="@string/action_dangxguat"></item>
</menu>