<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"

    >

    <Button
        android:id="@+id/btn_nhanphong"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/dialog_nhanphong"
        android:textAllCaps="false"
        android:textSize="@dimen/heading_2"
        android:gravity="start"
        style="?actionModeCloseButtonStyle"
      android:textColor="@color/black"

        android:backgroundTint="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_mo"></View>

    <Button
        android:id="@+id/btn_datphong"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/dialog_datphong"
        android:textAllCaps="false"
        style="?actionModeCloseButtonStyle"
        android:textSize="@dimen/heading_2"
        android:textColor="@color/black"
        android:gravity="start"
        android:backgroundTint="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_mo"></View>
    <Button
        android:id="@+id/btn_chitietphong"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/dialog_chitietphong"
        android:textAllCaps="false"
        style="?actionModeCloseButtonStyle"
        android:textSize="@dimen/heading_2"
        android:gravity="start"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_mo"></View>
    <Button
        android:id="@+id/btn_traphong"
        android:layout_width="match_parent"
        style="?actionModeCloseButtonStyle"
        android:layout_height="50dp"
        android:text="@string/dialog_traphong"
        android:textAllCaps="false"
        android:textSize="@dimen/heading_2"
        android:textColor="@color/black"
        android:gravity="start"
        android:backgroundTint="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_mo"></View>
    <Button
        android:id="@+id/btn_doiphong"
        android:layout_width="match_parent"
        style="?actionModeCloseButtonStyle"
        android:layout_height="50dp"
        android:text="@string/dialog_doiphong"
        android:textAllCaps="false"
        android:gravity="start"
        android:textSize="@dimen/heading_2"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_mo"></View>
    <Button
        android:id="@+id/btn_baotri"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/dialog_baotri"
        style="?actionModeCloseButtonStyle"
        android:textAllCaps="false"
        android:gravity="start"
        android:textSize="@dimen/heading_2"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"/>


</LinearLayout>