<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linea_dsphong"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:layout_gravity="center"
  >


    <TextView
        android:id="@+id/tv_dia_nhanphong"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"

        android:gravity="start"
        android:padding="10dp"
        android:text="@string/dialog_nhanphong"
        android:textColor="@color/black"

        android:textSize="@dimen/heading_2"
        tools:ignore="MissingConstraints" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_mo"

        ></View>

    <TextView
        android:id="@+id/tv_dia_datphong"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/dialog_datphong"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_mo"></View>

    <TextView
        android:id="@+id/tv_dia_chitietphong"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/dialog_chitietphong"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_2" />



    <View
        android:id="@+id/view_traphong"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_mo"></View>

    <TextView
        android:id="@+id/tv_dia_traphong"
        android:layout_width="match_parent"

        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/dialog_traphong"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_2" />

    <View
        android:id="@+id/vDoiPhong"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/blue_mo"></View>

    <TextView
        android:id="@+id/tv_dia_doiphong"
        android:layout_width="match_parent"

        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/dialog_doiphong"
        android:textColor="@color/black"
        android:textSize="@dimen/heading_2" />



</LinearLayout>